--- a/site pirulito/sobrenos.html
+++ b/site pirulito/sobrenos.html
@@ -1,1 +1,41 @@
-sobrenos
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sobre mim</title>
+    <link rel="stylesheet" href="index.css">
+</head>
+<body>
+    <div class="container">
+        <nav>
+            <ul>
+                <li>
+                    <a href= "index.html">Home</a>
+                </li>
+                <li>
+                    <a href="inclusao.html"> Inclusão e Diversidade na Educação Física</a>
+                </li>
+                <li>
+                    <a href="papel.html"> Papel dos País e Responsáveis</a>
+                </li>
+                <li>
+                    <a href="sobrenos.html"> Sobre nós</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <main  class="apresentacao">
+        <section class="apresentacao__conteudo">
+            <h1 class="apresentacao__conteudo__titulo">Sobre Nos</h1>
+            <p class="apresentacao__conteudo__texto">Somos um grupo de estudante de ADS da Unimetrocamp desenvolvendo um website responsivo com o tema de Educação Física na infancia, colocando em pratica todos os conhecimentos adquiridos sobre HTML e CSS. </p>
+            <br>
+            <p class="apresentacao__conteudo__texto">Estamos atualmente no 2°semestre da faculdade, aprendendo novos conhecimentos e tecnologias voltadas para o front-end.</p>
+        </section>
+        <img src="imagem.jpg" alt=" foto do grupo" >
+    </main>
+    <footer class="rodape">
+        <p>Desenvolvido por Cauã Moura e Anna Lua</p>
+    </footer>
+</body>
+</html>
