--- a/site pirulito/papel.html
+++ b/site pirulito/papel.html
@@ -1,1 +1,35 @@
-papel
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sobre mim</title>
+    <link rel="stylesheet" href="index.css">
+</head>
+<body>
+    <div class="container">
+        <nav>
+            <ul>
+                <li>
+                    <a href= "index.html">Home</a>
+                </li>
+                <li>
+                    <a href="inclusao.html"> Inclusão e Diversidade na Educação Física</a>
+                </li>
+                <li>
+                    <a href="papel.html"> Papel dos País e Responsáveis</a>
+                </li>
+                <li>
+                    <a href="sobrenos.html"> Sobre nós</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <main  class="apresentacao">
+        
+    </main>
+    <footer class="rodape">
+        <p>Desenvolvido por Cauã Moura e Anna Lua</p>
+    </footer>
+</body>
+</html>
