--- a/site pirulito/sobrenos.html
+++ b/site pirulito/sobrenos.html
@@ -11,6 +11,9 @@
         <nav>
             <ul>
                 <li>
+                    <a href= "login.html">Login</a>
+                </li>
+                <li>
                     <a href= "index.html">Home</a>
                 </li>
                 <li>
