--- a/site pirulito/login.html
+++ b/site pirulito/login.html
@@ -8,7 +8,7 @@
 </head>
  <body>
     <h1>Bem-vindo à nossa página de login</h1>
-    <p>Ainda não possui uma conta? <a href="cadastro.html">Clique aqui</a> para criar uma.</p>
+    <p>Ainda não possui uma conta? <a href="cadastro.html"><u>Clique aqui</u></a> para criar uma.</p>
     <h2>Formulário de Login</h2>    
      <form action="/login" method="post"> 
         <div class="center"> 
