--- a/site pirulito/login.html
+++ b/site pirulito/login.html
@@ -20,7 +20,7 @@
                 <button type="submit">Entrar</button>
 
             </div> <div class="container" style="background-color:#f1f1f1">
-                 <button type="button" class="cancelbtn">Cancelar</button>
+                 <button type="button" class="cancelbtn">Cancelar onclick="href=index.html"</button>
                   <span class="psw">Esqueceu a <a href="#">senha?</a></span> 
                 </div>
                         <script>
