--- a/site pirulito/cadastro.html
+++ b/site pirulito/cadastro.html
@@ -17,6 +17,7 @@
     <input type="password" id="password" name="password" required>
     <br>
     <input type="submit" value="Cadastrar">
+      window.location.href = 'login.html';
  </form>
 </body>
 </html>
