--- a/site pirulito/cadastro.html
+++ b/site pirulito/cadastro.html
@@ -16,8 +16,7 @@
     <label for="password">Senha:</label>
     <input type="password" id="password" name="password" required>
     <br>
-    <input type="submit" value="Cadastrar">
-      window.location.href = 'login.html';
+    <input type="submit" value="Cadastrar" onclick="location.href='login.html'">
  </form>
 </body>
 </html>
