--- a/site pirulito/login.html
+++ b/site pirulito/login.html
@@ -21,7 +21,7 @@
 
             </div> <div class="container" style="background-color:#f1f1f1">
                  <button onclick="location.href= 'index.html'" type="button" class="cancelbtn">Cancelar </button>
-                  <p>Esqueceu a senha? <a href="esqueceuasenha.html"><u>Clique aqui</u></a> para redefinr.</p>
+                  <span class="psw"><u>Esqueceu a <a href="esqueceuasenha.html">senha?</a></u></span>
                 </div>
                         <script>
             document.querySelector('form').addEventListener('submit', function(event) {
