--- a/site pirulito/esqueceuasenha.html
+++ b/site pirulito/esqueceuasenha.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Esqueceu a Senha</title>
+     <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <h1>Esqueceu a Senha</h1>
