--- a/site pirulito/index.html
+++ b/site pirulito/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Educação Física na Infância</title>
-    <style> </style>
+   <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <div class="container">
