--- a/site pirulito/sobrenos.html
+++ b/site pirulito/sobrenos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sobre mim</title>
+    <title>Sobre Nós</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
@@ -30,7 +30,7 @@
     </header>
     <main  class="apresentacao">
         <section class="apresentacao__conteudo">
-            <h1 class="apresentacao__conteudo__titulo">Sobre Nos</h1>
+            <h1 class="apresentacao__conteudo__titulo">Sobre Nós</h1>
             <p class="apresentacao__conteudo__texto">Somos um grupo de estudante de ADS da Unimetrocamp desenvolvendo um website responsivo com o tema de Educação Física na infancia, colocando em pratica todos os conhecimentos adquiridos sobre HTML e CSS. </p>
             <br>
             <p class="apresentacao__conteudo__texto">Estamos atualmente no 2°semestre da faculdade, aprendendo novos conhecimentos e tecnologias voltadas para o front-end.</p>
