--- a/site pirulito/sobrenos.html
+++ b/site pirulito/sobrenos.html
@@ -36,6 +36,8 @@
             <p class="apresentacao__conteudo__texto">Estamos atualmente no 2°semestre da faculdade, aprendendo novos conhecimentos e tecnologias voltadas para o front-end.</p>
         </section>
         <img src="imagem.jpg" alt=" foto do grupo" >
+        <p class="apresentacao__conteudo__texto">Pensamos em montar esse projeto de site para ajudar os pais. Atender apenas um público- alvo, pais que querem o melhor para os filhos, existe milhares de benefícios relacionado ao exercício físico. A atividade física reduz o estresse e sintomas de ansiedade, melhora a qualidade do sono, melhora a aprendizagem, reduz sintomas depressivos, previne e diminui a mortalidade por doenças crônicas como pressão alta e diabetes, melhora a força, equilíbrio e flexibilidade, proporciona a socialização e a convivência. 
+.</p>
     </main>
     <footer class="rodape">
         <p>Desenvolvido por Cauã Moura e Anna Lua</p>
