--- a/site pirulito/sobrenos.html
+++ b/site pirulito/sobrenos.html
@@ -38,7 +38,7 @@
         <img src="imagem.jpg" alt=" foto do grupo" >
         <p class="apresentacao__conteudo__texto">Pensamos em montar esse projeto de site para ajudar os pais. Atender apenas um público- alvo, pais que querem o melhor para os filhos, existe milhares de benefícios relacionado ao exercício físico. A atividade física reduz o estresse e sintomas de ansiedade, melhora a qualidade do sono, melhora a aprendizagem, reduz sintomas depressivos, previne e diminui a mortalidade por doenças crônicas como pressão alta e diabetes, melhora a força, equilíbrio e flexibilidade, proporciona a socialização e a convivência. 
 .</p>
-        <p class="apresentacao__conteudo__texto"> Juntando todos os ensinamentos propostos pela Educação Física, a principal função é incentivar e estimular as crianças a praticar esportes, dançar, se movimentar para melhorar a qualidade de vida. A disciplina ajuda a desenvolver habilidades cognitivas e comportamentais. Através das atividades físicas, auxilia no combate a doenças ligadas ao sedentarismo, além de fortalecer músculos e articulações </p> 
+        <p class="apresentacao__conteudo__texto"> Juntando todos os ensinamentos propostos pela Educação Física, a principal função é incentivar e estimular as crianças a praticar esportes, dançar, se movimentar para melhorar a qualidade de vida. A disciplina ajuda a desenvolver habilidades cognitivas e comportamentais. Através das atividades físicas, auxilia no combate a doenças ligadas ao sedentarismo, além de fortalecer músculos e articulações. </p> 
 
     </main>
     <footer class="rodape">
