--- a/site pirulito/sobrenos.html
+++ b/site pirulito/sobrenos.html
@@ -32,7 +32,7 @@
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Sobre Nós</h1>
             <p class="apresentacao__conteudo__texto">Somos um grupo de estudante de ADS da Unimetrocamp desenvolvendo um website responsivo com o tema de Educação Física na infancia, colocando em pratica todos os conhecimentos adquiridos sobre HTML e CSS. </p>
-        <img src="./img/b8a9e7d6-0958-4592-846b-112685e8128e.jpg" alt=" foto do grupo" >
+        <img src="/img/b8a9e7d6-0958-4592-846b-112685e8128e.jpg" alt=" foto do grupo" >
             <p class="apresentacao__conteudo__texto">Estamos atualmente no 2°semestre da faculdade, aprendendo novos conhecimentos e tecnologias voltadas para o front-end e back-end.</p>
         </section>
         <p class="apresentacao__conteudo__texto">Pensamos em montar esse projeto de site para ajudar os pais. Atender apenas um público- alvo, pais que querem o melhor para os filhos, existe milhares de benefícios relacionado ao exercício físico. A atividade física reduz o estresse e sintomas de ansiedade, melhora a qualidade do sono, melhora a aprendizagem, reduz sintomas depressivos, previne e diminui a mortalidade por doenças crônicas como pressão alta e diabetes, melhora a força, equilíbrio e flexibilidade, proporciona a socialização e a convivência. 
