--- a/site pirulito/papel.html
+++ b/site pirulito/papel.html
@@ -9,23 +9,28 @@
 <body>
     <div class="container">
         <nav>
-            <ul>
-                <li>
-                    <a href= "login.html">Login</a>
-                </li>
-                <li>
-                    <a href= "index.html">Home</a>
-                </li>
-                <li>
-                    <a href="inclusao.html"> Inclusão e Diversidade na Educação Física</a>
-                </li>
-                <li>
-                    <a href="papel.html"> Papel dos País e Responsáveis</a>
-                </li>
-                <li>
-                    <a href="sobrenos.html"> Sobre nós</a>
-                </li>
-            </ul>
+            <div class="container">
+                <nav>
+                    <ul>
+                        <li>
+                            <a href= "login.html">Login</a>
+                        </li>
+                        <li>
+                            <a href= "index.html">Home</a>
+                        </li>
+                        <li>
+                            <a href="inclusao.html"> Inclusão e Diversidade na Educação Física</a>
+                        </li>
+                        <li>
+                            <a href="formulario.html">  Formulario </a>
+                        </li>
+                        <li>
+                            <a href="papel.html"> Papel dos País e Responsáveis</a>
+                        </li>
+                        <li>
+                            <a href="sobrenos.html"> Sobre nós</a>
+                        </li>
+                    </ul>
         </nav>
     </header>
     <main  class="apresentacao">
