--- a/site pirulito/sobrenos.html
+++ b/site pirulito/sobrenos.html
@@ -20,6 +20,9 @@
                     <a href="inclusao.html"> Inclusão e Diversidade na Educação Física</a>
                 </li>
                 <li>
+                    <a href="formulario.html">  Formulario </a>
+                </li>
+                <li>
                     <a href="papel.html"> Papel dos País e Responsáveis</a>
                 </li>
                 <li>
